小试牛刀犀牛书

--- a/js/犀牛书/类型、值、变量/01_数值/数值.html
+++ b/js/犀牛书/类型、值、变量/01_数值/数值.html
@@ -16,7 +16,7 @@
         //2.infinity
         let b = Infinity;
         console.log(b);
-        console.log(typeof b); 
+        console.log(typeof b); //number
     </script>
 </body>
 </html>
