--- a/js/犀牛书/类型、值、变量/01_数值/数值.html
+++ b/js/犀牛书/类型、值、变量/01_数值/数值.html
@@ -12,11 +12,12 @@
         let a = 5_000_000_0.00_00;//500000000
         console.log(a);
         console.log(typeof a);//number
-        console.log(parseFloat(a,2));
+        console.log(parseFloat(a));
         //2.infinity
         let b = Infinity;
         console.log(b);
         console.log(typeof b); //number
+        console.log(isNan(Nan));
     </script>
 </body>
 </html>
