--- a/js/数组.html
+++ b/js/数组.html
@@ -155,10 +155,22 @@
         }
         let arrt0 = [1,2,3,5,6];
         let newarrt = arrt0.map((x)=>{
+            console.log(x,'x');
             return x+10;
         })
         console.log(newarrt);
         console.log(newarrt.join('--'));//11--12--13--15--16
+
+        const testArr = [6,8,1,2,4,5,6];
+        console.log(testArr);
+        console.log(testArr.entries());
+        for (const [index,value] of testArr.entries()) {
+            console.log(index,value);
+        }
+        testArr.sort((v1,v2)=>{
+            return v2-v1;
+        });
+        console.log(testArr);
     </script>
 </body>
 </html>
