--- a/js/数组.html
+++ b/js/数组.html
@@ -171,6 +171,8 @@
             return v2-v1;
         });
         console.log(testArr);
+        console.log(testArr[Symbol.iterator] == testArr.values);//true
+        
     </script>
 </body>
 </html>
