--- a/CSS/flex/test.html
+++ b/CSS/flex/test.html
@@ -22,5 +22,9 @@
         <span>span</span>
         <span>span2</span>
     </div>
+    <div style="height:200px;width: 200px;background-color: pink;display: flex;">
+        <div style="background-color:red;width: 100%;">red</div>
+        <div style="background-color: black;width: 100%;color: aliceblue;">right</div>
+    </div>
 </body>
 </html>
