--- a/js/箭头函数.html
+++ b/js/箭头函数.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <script>
-        // let arr = [1,2,3];
-        // for (const iterator of arr.entries()) {
-        //     console.log(iterator);
-            
-        // }
+        //箭头函数不能new
+        const person = ()=>{
+            console.log(this);
+        };
+        const p1 = new person();
+        
     </script>
 </body>
 </html>
