--- a/js/forof.html
+++ b/js/forof.html
@@ -13,6 +13,12 @@
         //     console.log(iterator);
             
         // }
+        // for (const key in object) {
+        //     if (Object.hasOwnProperty.call(object, key)) {
+        //         const element = object[key];
+                
+        //     }
+        // }
     </script>
 </body>
 </html>
