--- a/js/leecode.html
+++ b/js/leecode.html
@@ -71,20 +71,50 @@
         // map.set('1',3)
         // console.log(map);
         // console.log(map.get('1'));
-        var twoSum = function (nums, target) {
-            const map = new Map();
-            for (let head = 0; head < nums.length - 1; head++) {
-                //map存储key为当前遍历位置值的互补值:value为对应的index
-                map.set(target - nums[head],head);
-                if(map.has(nums[head+1])){
-                    console.log(map);
-                    return [map.get(nums[head+1]),head+1]
-                }
-            };
+        // var twoSum = function (nums, target) {
+        //     const map = new Map();
+        //     for (let head = 0; head < nums.length - 1; head++) {
+        //         //map存储key为当前遍历位置值的互补值:value为对应的index
+        //         map.set(target - nums[head],head);
+        //         if(map.has(nums[head+1])){
+        //             console.log(map);
+        //             return [map.get(nums[head+1]),head+1]
+        //         }
+        //     };
 
+        // };
+        // console.log(twoSum([1,3,4,8,5,6],5));
+        // console.log((3+2)/2);
+        var threeSum = function (nums) {
+            nums.sort((a,b)=>a-b);
+            const arr = [];
+            let i =0;
+            while ( i < nums.length-2) {
+                if(nums[i]>0) break;
+                let s = i+1,e=nums.length-1;
+                while(s<e){
+                    if(nums[i]*nums[e]>0) break;
+                    let sum = nums[i]+nums[s]+nums[e];
+                    if(sum===0){
+                        arr.push([nums[i],nums[s],nums[e]]);
+                        console.log(i,s,e)
+                    }
+                    if(sum > 0){
+                        while(nums[e]===nums[--e]){}
+                        console.log(i,s,e)
+                    }else{
+                        while(nums[s]===nums[++s]){}
+                        console.log(i,s,e)
+                    }
+                }
+                console.log('0000');
+                while (nums[i] === nums[++i]) {}
+            }
+            return arr;
         };
-        console.log(twoSum([1,3,4,8,5,6],5));
-        console.log((3+2)/2);
+        
+        console.log(threeSum([0,0,0,0]));
+
     </script>
 </body>
 
