--- a/js/文件读取.html
+++ b/js/文件读取.html
@@ -7,19 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="file" name="wj" id="wj">
-    <div id="div"></div>
+    <form enctype="multipart/form-data">
+        <input type="text" name="name">
+        <input type="password" name="password">
+        <input type="file" name="wj111" id="wj">
+    </form>
+    <button onclick="upload()">上传文件</button>
     <script>
-        const div = document.getElementById('div')
-        let fr;
-        document.getElementById('wj').addEventListener('change',(event)=>{
-            console.log(event.target.files[0]);
-            fr = new FileReader();
-            fr.readAsText(event.target.files[0]);
-            fr.onload = ()=>{
-        
+        function upload(){
+        const file = document.getElementById('wj').files[0];
+        const formdata = new FormData(document.forms[0]);
+        const xhr = new XMLHttpRequest();
+        xhr.open('post','http://127.0.0.1/upload');
+        xhr.onload = ()=>{
+            console.log(xhr.status);
+            if(xhr.status == 200){
+                alert('上传完毕')
             }
-        })
+        };
+        xhr.send(formdata);
+        }
+
         // reader.onerror = (event)=>{
         //     console.log(event.message);
         // }
